# seacom-app-backend

./: .dockerignore  .env.example  .env.experimental  DASHBOARD_ARCHITECTURE.md  DASHBOARD_IMPLEMENTATION_GUIDE.md  DASHBOARD_QUICKSTART.md  DELIVERY_SUMMARY.md  Dockerfile  EXAMPLE_DATA_RESPONSES.md  OPTIMIZATION_TODO.md  README.md  SEACOM_APP_DOCUMENTATION.md  SEACOM_DEVELOPER_DOCUMENTATION.md  SEACOM_USER_GUIDE_TRAINING_MANUAL.md  SEACOM_USER_TRAINING_GUIDE.md  convert_logos.py  docker-compose.yml  experimental.env  package.json  pyproject.toml  run-experimental.ps1  run-production.ps1  start-redis.bat  start-redis.ps1  test_pdf.py
.claude/: settings.json  settings.local.json
Types of reports we send to seacom/: December FUEL Report.xlsb.xlsx
app/: main.py
scripts/: 0008_create_user_sessions.sql  0009_create_system_settings.sql  0010_fix_client_unique_constraint.sql  0011_enforce_single_active_report_per_task.sql  0012_create_incident_reports.sql  0013_alter_incident_reports_add_missing_columns.sql  0014_fix_incident_report_column_types.sql  0015_recreate_incident_reports.sql  0016_add_incident_severity_milestones.sql  0017_create_incident_updates.sql  0018_create_maintenance_schedules.sql  0019_fix_incident_severity_case.sql  0020_task_multi_technician.sql  0021_fix_report_type_general.sql  0021_task_feedback_scheduled_date.sql  0022_add_assigned_by.sql  0023_fix_maintenance_schedule_constraint.sql  0024_add_task_on_hold.sql  0025_seed_terraco_sites.sql  0026_create_technician_sites.sql  0027_seed_rd_routes.sql  0028_dedupe_sites_and_enforce_unique_name.sql  (+22 more)
(+93 files in other folders)
